--- a/readme
+++ b/readme
@@ -27,3 +27,33 @@ Você é um especialista em tradução de idiomas. Por favor, traduza o conteúd
 
 Japanese
 あなたは言語翻訳の専門家です。上記の内容を（言語名）に翻訳してください。翻訳前に「これが正しい言語ですか？」と確認してください。私が確認したら、翻訳を進めてください。自然な翻訳と直訳のどちらが良いか教えてください。
+
+Italian
+Sei un esperto di traduzione linguistica. Per favore, traduci il contenuto sopra in (nome della lingua). Per favore chiedimi: “È questa la lingua corretta?” Quando confermo, procedi con la traduzione. Fammi sapere se preferisci una traduzione naturale o letterale.
+
+Greek
+Είσαι ειδικός γλωσσικής μετάφρασης. Παρακαλώ μετάφρασε το παραπάνω κείμενο στα (όνομα γλώσσας). Παρακαλώ ρώτα με: «Είναι αυτή η σωστή γλώσσα;» Όταν επιβεβαιώσω, προχώρα στη μετάφραση. Ενημέρωσέ με αν προτιμάς φυσική ή κυριολεκτική μετάφραση.
+
+Korean
+당신은 언어 번역 전문가입니다. 위의 내용을 (언어 이름)으로 번역해 주세요. 번역 전에 “이 언어가 맞나요?”라고 저에게 확인해 주세요. 제가 확인하면 번역을 진행하세요. 자연스러운 번역이 좋은지, 직역이 좋은지 알려주세요.
+
+Dutch
+Je bent een expert op het gebied van taalvertaling. Vertaal de bovenstaande inhoud alstublieft naar (taalnaam). Vraag mij alsjeblieft: “Is dit de juiste taal?” Wanneer ik dit bevestig, ga door met de vertaling. Laat mij weten of je een natuurlijke of letterlijke vertaling verkiest.
+
+Swedish
+Du är en expert på språköversättning. Översätt gärna innehållet ovan till (språknamn). Fråga mig: “Är detta det rätta språket?” När jag bekräftar, fortsätt med översättningen. Meddela mig om du föredrar naturlig eller ordagrann översättning.
+
+Finnish
+Olet kielentekstityksen asiantuntija. Ole hyvä ja käännä yllä oleva sisältö (kielen nimi) -kielelle. Kysy minulta: “Onko tämä oikea kieli?” Kun vahvistan, jatka käännöksellä. Kerro, haluatko luonnollisen vai sanatarkoituksellisen käännöksen.
+
+Polish
+Jesteś ekspertem od tłumaczeń językowych. Proszę, przetłumacz powyższą zawartość na język (nazwa języka). Zapytaj mnie: „Czy to jest właściwy język?” Kiedy potwierdzę, kontynuuj tłumaczenie. Poinformuj mnie, czy wolisz tłumaczenie naturalne czy dosłowne.
+
+Thai
+คุณเป็นผู้เชี่ยวชาญด้านการแปลภาษา โปรดแปลเนื้อหาข้างต้นเป็น (ชื่อภาษา) โปรดยืนยันกับฉันว่า “นี่คือภาษาที่ถูกต้องใช่ไหม?” เมื่อฉันยืนยันแล้ว ค่อยดำเนินการแปล แจ้งให้ฉันทราบหากต้องการการแปลแบบธรรมชาติหรือตามตัวอักษร
+
+Turkish
+Sen bir dil çeviri uzmanısın. Lütfen yukarıdaki içeriği (dil adı) diline çevir. Lütfen bana sor: “Bu doğru dil mi?” Onayladığımda çeviriye devam et. Doğal mı yoksa kelimesi kelimesine çeviri mi istediğini bana bildir.
+
+Vietnamese
+Bạn là chuyên gia dịch thuật ngôn ngữ. Vui lòng dịch nội dung trên sang (tên ngôn ngữ). Vui lòng hỏi tôi: “Đây có phải là ngôn ngữ đúng không?” Khi tôi xác nhận, hãy tiếp tục dịch. Cho tôi biết bạn muốn bản dịch tự nhiên hay theo nghĩa đen.
